[gd_scene load_steps=11 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://Minecraftia.tres" type="DynamicFont" id=3]
[ext_resource path="res://quit-arrow.png" type="Texture" id=4]
[ext_resource path="res://negrosiusblack1.png" type="Texture" id=5]
[ext_resource path="res://negrosiusblack2.png" type="Texture" id=6]
[ext_resource path="res://negrosiusblack3.png" type="Texture" id=7]
[ext_resource path="res://negrosiusblack4.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.00161, 4.79365 )

[node name="player" type="Node2D"]
script = ExtResource( 1 )

[node name="player" type="KinematicBody2D" parent="."]
scale = Vector2( 7, 6.65 )
script = ExtResource( 2 )

[node name="player_camera" type="Camera2D" parent="player"]
scale = Vector2( 0.1, 0.1 )
current = true
zoom = Vector2( 1.1, 1.1 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="menub" type="Control" parent="player/player_camera"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1510.0
margin_top = -895.0
margin_right = -1046.0
margin_bottom = -771.0

[node name="menubox" type="HBoxContainer" parent="player/player_camera/menub"]
margin_right = 154.0
margin_bottom = 40.0
rect_scale = Vector2( 3, 3 )

[node name="back" type="Button" parent="player/player_camera/menub/menubox"]
margin_right = 80.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
icon = ExtResource( 4 )

[node name="quit" type="Button" parent="player/player_camera/menub/menubox"]
margin_left = 84.0
margin_right = 154.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
icon = ExtResource( 4 )

[node name="status" type="Control" parent="player/player_camera"]
margin_right = 40.0
margin_bottom = 40.0

[node name="statusbox" type="VBoxContainer" parent="player/player_camera/status"]
margin_left = 1011.0
margin_top = -893.0
margin_right = 1177.0
margin_bottom = -784.0
rect_scale = Vector2( 3, 3 )

[node name="hp_level" type="Label" parent="player/player_camera/status/statusbox"]
margin_right = 166.0
margin_bottom = 14.0

[node name="stm_label" type="Label" parent="player/player_camera/status/statusbox"]
margin_top = 18.0
margin_right = 166.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )

[node name="power_level" type="Label" parent="player/player_camera/status/statusbox"]
margin_top = 44.0
margin_right = 166.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )

[node name="player_sprite" type="AnimatedSprite" parent="player"]
position = Vector2( -0.606778, -0.758554 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 1 )
animation = "run"
__meta__ = {
"_edit_group_": true
}

[node name="player_collision" type="CollisionShape2D" parent="player"]
position = Vector2( 0, -0.772346 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="stmregen" type="Timer" parent="player"]
wait_time = 0.12
autostart = true

[node name="stmloss" type="Timer" parent="player"]
wait_time = 0.25
autostart = true

[node name="djump" type="Timer" parent="player"]
wait_time = 0.3
one_shot = true

[node name="powergen" type="Timer" parent="player"]
wait_time = 0.4
autostart = true
[connection signal="pressed" from="player/player_camera/menub/menubox/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="player/player_camera/menub/menubox/quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="player/stmregen" to="player" method="_on_stmregen_timeout"]
[connection signal="timeout" from="player/stmloss" to="player" method="_on_stmloss_timeout"]
[connection signal="timeout" from="player/djump" to="player" method="_on_djump_timeout"]
[connection signal="timeout" from="player/powergen" to="player" method="_on_powergen_timeout"]
